// network object

syntax = "proto3";
package dnetproto;

// Mandatory imports.
import "github.com/pensando/sw/nic/agent/protos/netproto/mirror.proto";
import "delphi.proto";

// Endpoint Object
message MirrorSession {
    option (delphi.update_event) = true;
    delphi.ObjectMeta   Meta        = 1;
    string              Key         = 2;
    netproto.MirrorSession  MirrorSession  = 3;
}

message InterfaceMirrorSession {
    option (delphi.update_event) = true;
    delphi.ObjectMeta   Meta        = 1;
    string              Key         = 2;
    netproto.InterfaceMirrorSession InterfaceMirrorSession  = 3;
}
